--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
 }
@@ -25,4 +24,11 @@
 
 button {
   text-align: center;
+  background-color: #5a3472;
+  border: none;
+  width: 330px;
+  color: #ffffff;
+  align-self: center;
+  padding: 10px;
+  border-radius: 4px;
 }
